environments/cq-qa/ingresses.yml
#Once migration is complete, clin.cqdg -> clin + switch to clin certificate
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-proxy-api-meta
spec:
  tls:
    - hosts:
      - meta.qa.clin.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: meta.qa.clin.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clin-proxy-api-meta
            servicePort: 7000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-proxy-api-gene
spec:
  tls:
    - hosts:
      - gene.qa.clin.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: gene.qa.clin.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clin-proxy-api-gene
            servicePort: 5002
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-proxy-api-variant
spec:
  tls:
    - hosts:
      - variant.qa.clin.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: variant.qa.clin.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clin-proxy-api-variant
            servicePort: 5001
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-proxy-api-patient
spec:
  tls:
    - hosts:
      - patient.qa.clin.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: patient.qa.clin.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clin-proxy-api-patient
            servicePort: 4000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-proxy-api-hpo
spec:
  tls:
    - hosts:
      - hpo.qa.clin.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: hpo.qa.clin.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clin-proxy-api-hpo
            servicePort: 8400
